--- a/notesapp/deployment.yaml
+++ b/notesapp/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: todo-app
-        image: sumeetkulkarni/my-note-app
+        image: abhidochub123/myapp123
         ports: 
         - containerPort: 8000
